add_executable (chanser_proof chanser_proof.cpp)
target_link_libraries(chanser_proof ${ROOT_LIBRARIES})
add_executable (chanser_root chanser.cpp)
target_link_libraries(chanser_root ${ROOT_LIBRARIES})
add_executable (chanser_mva chanser_mva.cpp)
target_link_libraries(chanser_mva ${ROOT_LIBRARIES})
add_executable (chanser_skeleton chanser_skeleton.cpp)
target_link_libraries(chanser_skeleton ${ROOT_LIBRARIES})

install (TARGETS chanser_root chanser_mva chanser_proof chanser_skeleton DESTINATION ${CMAKE_INSTALL_BINDIR})
